--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetBundleCacher.cs" />
+    <Compile Include="AutoAppLaunchManager.cs" />
     <Compile Include="CefCustomDownloadHandler.cs" />
     <Compile Include="CefCustomDragHandler.cs" />
     <Compile Include="CefCustomMenuHandler.cs" />
