refactor: Add new class for monitoring VRC processes
This replaces the old AppApi functionality that would poll all processes twice to grab the status of both VRChat and vrserver.exe every... *checks app.js* 500ms.

It also raises events for when a monitored process is started/closed, mainly for the new AppLauncher feature, which is now using this class instead of monitoring vrchat itself.

--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ImageCache.cs" />
     <Compile Include="IPCClient.cs" />
     <Compile Include="IPCServer.cs" />
+    <Compile Include="ProcessMonitor.cs" />
     <Compile Include="ScreenshotHelper.cs" />
     <Compile Include="StartupArgs.cs" />
     <Compile Include="Update.cs" />
