--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -92,6 +92,7 @@
     <Compile Include="IPCServer.cs" />
     <Compile Include="ProcessMonitor.cs" />
     <Compile Include="ScreenshotHelper.cs" />
+    <Compile Include="SQLiteWorld.cs" />
     <Compile Include="StartupArgs.cs" />
     <Compile Include="Update.cs" />
     <Compile Include="CefService.cs" />
@@ -123,6 +124,7 @@
     <Compile Include="AppApi.cs" />
     <Compile Include="VRCXStorage.cs" />
     <Compile Include="JsonSerializer.cs" />
+    <Compile Include="WorldDBManager.cs" />
     <Compile Include="WinApi.cs" />
     <Compile Include="WinformBase.cs">
       <SubType>Form</SubType>
