--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -88,6 +88,7 @@
     <Compile Include="CefCustomDragHandler.cs" />
     <Compile Include="CefCustomMenuHandler.cs" />
     <Compile Include="ScreenshotMetadata.cs" />
+    <Compile Include="ScreenshotMetadataDatabase.cs" />
     <Compile Include="WorldDatabase.cs" />
     <Compile Include="ImageCache.cs" />
     <Compile Include="IPCClient.cs" />
