--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -51,10 +51,10 @@
   </PropertyGroup>
   <ItemGroup>
 	  <Reference Include="Blake2Sharp">
-		  <HintPath>librsync.net\Blake2Sharp.dll</HintPath>
+		  <HintPath>libs\Blake2Sharp.dll</HintPath>
 	  </Reference>
 	  <Reference Include="librsync.net">
-		  <HintPath>librsync.net\librsync.net.dll</HintPath>
+		  <HintPath>libs\librsync.net.dll</HintPath>
 	  </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -106,10 +106,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="openvr_api.dll">
+    <Content Include="libs\openvr_api.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="sqlite3.dll">
+    <Content Include="libs\sqlite3.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VRCX.ico">
