add initial implementation of dbmerger
merges of user tables that have overlapping data is still unimplemented. otherwise, merging of all other tables has been implemented.

--- a/VRCX.csproj
+++ b/VRCX.csproj
@@ -50,6 +50,11 @@
     <CollectSQLiteInteropFiles>false</CollectSQLiteInteropFiles>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="DBMerger\**" />
+    <EmbeddedResource Remove="DBMerger\**" />
+    <None Remove="DBMerger\**" />
+  </ItemGroup>
+  <ItemGroup>
 	  <Reference Include="Blake2Sharp">
 		  <HintPath>librsync.net\Blake2Sharp.dll</HintPath>
 	  </Reference>
