--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,18 @@
     "bracketSpacing": true,
     "arrowParens": "always",
     "vueIndentScriptAndStyle": true,
-    "endOfLine": "auto"
+    "endOfLine": "auto",
+    "plugins": [
+        "@prettier/plugin-pug"
+    ],
+    "overrides": [
+        {
+            "files": "*.pug",
+            "options": {
+                "pugPrintWidth": 120,
+                "pugAttributeSeparator": "none",
+                "pugBracketSameLine": true
+            }
+        }
+    ]
 }
