feat: groups sidebar collapsible (#1079)

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,12 @@
                 "pugAttributeSeparator": "none",
                 "pugBracketSameLine": true
             }
+        },
+        {
+            "files": "*.vue",
+            "options": {
+                "printWidth": 120
+            }
         }
     ]
 }
