--- a/Dotnet/VRCX-Electron.csproj
+++ b/Dotnet/VRCX-Electron.csproj
@@ -123,8 +123,8 @@
     <Compile Remove="AppApi\Cef\**" />
     <Content Remove="PWI\**" />
     <Compile Remove="PWI\**" />
-    <Content Remove="Overlay\**" />
-    <Compile Remove="Overlay\**" />
+    <Content Remove="Overlay\Cef\**" />
+    <Compile Remove="Overlay\Cef\**" />
     <Content Remove="DBMerger\**" />
     <Compile Remove="DBMerger\**" />
   </ItemGroup>
