Update .gitignore and enable checkJs in jsconfig

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "module": "ESNext",
         "target": "ESNext",
         "allowJs": true,
-        "checkJs": false,
+        "checkJs": true,
         "jsx": "preserve",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
