fix: update cef, eslint config to include updated AppApiVr names

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
         "LogWatcher": "readonly",
         "Discord": "readonly",
         "AppApi": "readonly",
-        "AppApiVr": "readonly",
+        "AppApiVrCef": "readonly",
+        "AppApiVrElectron": "readonly",
         "SharedVariable": "readonly",
         "WebApi": "readonly",
         "AssetBundleManager": "readonly",
