will it build? that's the question

--- a/package.json
+++ b/package.json
@@ -139,6 +139,27 @@
             },
             "maintainer": "rs189 <35667100+rs189@users.noreply.github.com>",
             "description": "Friendship management tool for VRChat"
+        },
+        "mac": {
+            "artifactName": "VRCX_Version.${ext}",
+            "target": [
+                "dmg"
+            ],
+            "icon": "VRCX.png",
+            "category": "public.app-category.utilities",
+            "executableName": "VRCX",
+            "desktop": {
+                "entry": {
+                    "Name": "VRCX",
+                    "Comment": "Friendship management tool for VRChat",
+                    "Icon": "VRCX",
+                    "Terminal": "false",
+                    "Type": "Application",
+                    "Categories": "Utility;Application;"
+                }
+            },
+            "maintainer": "rs189 <35667100+rs189@users.noreply.github.com>",
+            "description": "Friendship management tool for VRChat"
         }
     },
     "dependencies": {
