--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "private": true,
     "main": "src-electron/main.js",
     "scripts": {
-        "dev-vite": "cross-env PLATFORM=windows vite",
-        "dev": "cross-env PLATFORM=windows webpack serve --config webpack.config.js --mode development",
+        "dev": "cross-env PLATFORM=windows vite",
         "dev:test": "concurrently \"npm run dev\" \"jest --watchAll\"",
         "watch": "cross-env PLATFORM=windows webpack --config webpack.config.js --mode development --watch",
         "watch-linux": "cross-env PLATFORM=linux webpack --config webpack.config.js --mode development --watch",
@@ -45,43 +44,31 @@
         "@types/node": "^24.3.0",
         "@vitejs/plugin-vue": "^6.0.1",
         "animate.css": "^4.1.1",
+        "babel-runtime": "^6.26.0",
         "concurrently": "^9.2.0",
-        "copy-webpack-plugin": "^13.0.1",
         "cross-env": "^10.0.0",
-        "css-loader": "^7.1.2",
         "dayjs": "^1.11.13",
         "echarts": "^6.0.0",
         "electron": "^37.3.0",
         "electron-builder": "^26.0.12",
         "element-plus": "^2.11.1",
         "esbuild-jest": "^0.5.0",
-        "esbuild-loader": "^4.3.0",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-vue": "^9.33.0",
         "globals": "^16.3.0",
-        "html-webpack-plugin": "^5.6.4",
         "jest": "^30.0.5",
-        "mini-css-extract-plugin": "^2.9.4",
         "noty": "^3.2.0-beta-deprecated",
         "pinia": "^3.0.3",
         "prettier": "^3.6.2",
-        "pug": "^3.0.3",
-        "pug-plain-loader": "^1.1.0",
-        "raw-loader": "^4.0.2",
         "remixicon": "^4.6.0",
         "sass": "^1.90.0",
-        "sass-loader": "^16.0.5",
         "vite": "^7.1.3",
         "vue": "^3.5.20",
-        "vue-data-tables": "^3.4.5",
         "vue-i18n": "^11.1.11",
         "vue-lazyload": "^3.0.0",
         "vue-markdown": "^2.2.4",
         "vue-marquee-text-component": "^1.2.0",
-        "webpack": "^5.101.2",
-        "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.2",
         "worker-timers": "^8.0.24",
         "yargs": "^18.0.0"
     },
