--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "pinia": "^3.0.3",
         "prettier": "^3.6.2",
         "remixicon": "^4.6.0",
-        "sass": "^1.91.0",
+        "sass-embedded": "^1.91.0",
         "vite": "^7.1.3",
         "vue": "^3.5.20",
         "vue-i18n": "^11.1.11",
