f-word vite hah

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "private": true,
     "main": "src-electron/main.js",
     "scripts": {
-        "dev": "cross-env PLATFORM=windows vite",
+        "dev": "cross-env PLATFORM=windows vite serve src",
         "dev:test": "concurrently \"npm run dev\" \"jest --watchAll\"",
         "watch": "cross-env PLATFORM=windows webpack --config webpack.config.js --mode development --watch",
         "watch-linux": "cross-env PLATFORM=linux webpack --config webpack.config.js --mode development --watch",
         "localization": "node ./src/localization/localizationHelperCLI.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "prod": "cross-env PLATFORM=windows vite build",
+        "prod": "cross-env PLATFORM=windows vite build src",
         "prod-linux": "cross-env PLATFORM=linux webpack --config webpack.config.js --mode production",
         "build-electron": "node ./src-electron/download-dotnet-runtime.js --arch=x64 && node ./src-electron/patch-package-version.js && electron-builder --x64 --publish never",
         "build-electron-arm64": "node ./src-electron/download-dotnet-runtime.js --arch=arm64 && node ./src-electron/patch-package-version.js && electron-builder --arm64 --publish never",
