--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
         "vite": "^7.1.3",
         "vue": "^3.5.20",
         "vue-i18n": "^11.1.11",
-        "vue-markdown": "^2.2.4",
         "vue-marquee-text-component": "^2.0.1",
+        "vue-showdown": "^4.2.0",
         "worker-timers": "^8.0.24",
         "yargs": "^18.0.0"
     },
